# brotli_g_sdk

./: .gitignore  Build.bat  CMakeLists.txt  LICENSE.txt  README.md  fetch_common.bat  fetch_dependencies.py
inc/: BrotliG.h  BrotligDecoder.h  BrotligEncoder.h  DataStream.h
inc/common/: BrotligBitReader.h  BrotligBitWriter.h  BrotligCommand.h  BrotligCommandLut.h  BrotligCommon.h  BrotligConstants.h  BrotligContextLut.h  BrotligDataConditioner.h  BrotligDeswizzler.h  BrotligFlags.h  BrotligHuffman.h  BrotligMultithreading.h  BrotligReverseBits.h  BrotligSwizzler.h  BrotligUtils.h
inc/decoder/: BrotligDecoderState.h  BrotligHuffmanTable.h  PageDecoder.h
inc/encoder/: BrotligBlockSplit.h  BrotligEncoderParams.h  BrotligEncoderState.h  BrotligHistogram.h  BrotligHuffman.h  BrotligMetaBlock.h  PageEncoder.h
sample/: BrotligGPUDecoder.cpp  BrotligGPUDecoder.h  CMakeLists.txt  brotlig_cli.cpp
src/: BrotligDecoder.cpp  BrotligEncoder.cpp  DataStream.cpp
src/common/: BrotligDataConditioner.cpp  BrotligDeswizzler.cpp  BrotligHuffman.cpp  BrotligMultithreading.cpp  BrotligSwizzler.cpp  BrotligUtils.cpp
src/decoder/: BrotliGCompute.hlsl  BrotligHuffmanTable.cpp  PageDecoder.cpp
src/encoder/: BrotligHuffman.cpp  BrotligMetaBlock.cpp  PageEncoder.cpp
